Réorganisation de la revue de littérature pour être plus cohérent et lisible

--- a/4-Sigles_Abrev.tex
+++ b/4-Sigles_Abrev.tex
@@ -13,9 +13,10 @@
   \acro{GPS}{Global Positionning System}
   \acro{CNN}{Convolutionnal Neural Networks}
   \acro{OSM}{OpenStreetMap}
-  \acro{TC}{Transport en commun}
+  \acro{TC}{Transport en Commun}
   \acro{PLUTO}{Primary Land Use Tax Lot Output}
   \acro{IoU}{Intersection over Union}
+  \acro{ReLu}{Unité de rectification linéaire ou \og{Rectified Linear Unit} \fg{}}
 \end{acronym}
 %
 \begin{longtable}{lp{5in}}
@@ -26,5 +27,6 @@ OSM     & OpenStreetMap \\
 TC      & Transport en Commun \\
 PLUTO   & Primary Land Use Tax Lot Output \\
 IoU & Intersection over Union\\
+ReLu & Unité de rectification linéaire ou \og{Rectified Linear Unit} \fg{}\\
 \end{longtable}
 
