--- a/Maitrise_Recherche.bib
+++ b/Maitrise_Recherche.bib
@@ -585,6 +585,19 @@
   keywords = {Land use,Parking,Surveys}
 }
 
+@inproceedings{Dosovitskiy:ImageWorth:2020,
+  title = {An {{Image}} Is {{Worth}} 16x16 {{Words}}: {{Transformers}} for {{Image Recognition}} at {{Scale}}},
+  shorttitle = {An {{Image}} Is {{Worth}} 16x16 {{Words}}},
+  booktitle = {International {{Conference}} on {{Learning Representations}}},
+  author = {Dosovitskiy, Alexey and Beyer, Lucas and Kolesnikov, Alexander and Weissenborn, Dirk and Zhai, Xiaohua and Unterthiner, Thomas and Dehghani, Mostafa and Minderer, Matthias and Heigold, Georg and Gelly, Sylvain and Uszkoreit, Jakob and Houlsby, Neil},
+  year = {2020},
+  month = oct,
+  urldate = {2024-06-28},
+  abstract = {While the Transformer architecture has become the de-facto standard for natural language processing tasks, its applications to computer vision remain limited. In vision, attention is either applied in conjunction with convolutional networks, or used to replace certain components of convolutional networks while keeping their overall structure in place. We show that this reliance on CNNs is not necessary and a pure transformer applied directly to sequences of image patches can perform very well on image classification tasks. When pre-trained on large amounts of data and transferred to multiple mid-sized or small image recognition benchmarks (ImageNet, CIFAR-100, VTAB, etc.), Vision Transformer (ViT) attains excellent results compared to state-of-the-art convolutional networks while requiring substantially fewer computational resources to train.},
+  langid = {english},
+  file = {C:\Users\paulc\Zotero\storage\FTPR6RXK\Dosovitskiy et al. - 2020 - An Image is Worth 16x16 Words Transformers for Im.pdf}
+}
+
 @article{Engel-Yan:WillReducing:2007,
   title = {Will Reducing Parking Standards Lead to Reductions in Parking Supply? {{Results}} of Extensive Commercial Parking Survey in {{Toronto}}, {{Canada}}},
   shorttitle = {Will Reducing Parking Standards Lead to Reductions in Parking Supply?},
@@ -669,6 +682,23 @@
   urldate = {2024-05-14},
   isbn = {978-1-4842-4167-7},
   langid = {english}
+}
+
+@article{Gibril:TransformerbasedSemantic:2024,
+  title = {Transformer-Based Semantic Segmentation for Large-Scale Building Footprint Extraction from Very-High Resolution Satellite Images},
+  author = {Gibril, Mohamed Barakat A. and {Al-Ruzouq}, Rami and Shanableh, Abdallah and Jena, Ratiranjan and Bolcek, Jan and Shafri, Helmi Zulhaidi Mohd and Ghorbanzadeh, Omid},
+  year = {2024},
+  month = may,
+  journal = {Advances in Space Research},
+  volume = {73},
+  number = {10},
+  pages = {4937--4954},
+  issn = {0273-1177},
+  doi = {10.1016/j.asr.2024.03.002},
+  urldate = {2024-06-28},
+  abstract = {Extracting building footprints from extensive very-high spatial resolution (VHSR) remote sensing data is crucial for diverse applications, including surveying, urban studies, population estimation, identification of informal settlements, and disaster management. Although convolutional neural networks (CNNs) are commonly utilized for this purpose, their effectiveness is constrained by limitations in capturing long-range relationships and contextual details due to the localized nature of convolution operations. This study introduces the masked-attention mask transformer (Mask2Former), based on the Swin Transformer, for building footprint extraction from large-scale satellite imagery. To enhance the capture of large-scale semantic information and extract multiscale features, a hierarchical vision transformer with shifted windows (Swin Transformer) serves as the backbone network. An extensive analysis compares the efficiency and generalizability of Mask2Former with four CNN models (PSPNet, DeepLabV3+, UpperNet-ConvNext, and SegNeXt) and two transformer-based models (UpperNet-Swin and SegFormer) featuring different complexities. Results reveal superior performance of transformer-based models over CNN-based counterparts, showcasing exceptional generalization across diverse testing areas with varying building structures, heights, and sizes. Specifically, Mask2Former with the Swin transformer backbone achieves a mean intersection over union between 88\% and 93\%, along with a mean F-score (mF-score) ranging from 91\% to 96.35\% across various urban landscapes.},
+  keywords = {CNN,Mask2former,Remote sensing,Satellite imagery,Swin Transformer,Vision transformer},
+  file = {C:\Users\paulc\Zotero\storage\85M987N4\S0273117724002205.html}
 }
 
 @article{Gonzalez:UrbanParking:2022,
@@ -847,6 +877,18 @@
   langid = {http://id.loc.gov/vocabulary/iso639-2/eng},
   school = {McGill University},
   keywords = {Urban Planning}
+}
+
+@article{Huang:TilingStitching:2018,
+  title = {Tiling and {{Stitching Segmentation Output}} for {{Remote Sensing}}: {{Basic Challenges}} and {{Recommendations}}},
+  shorttitle = {Tiling and {{Stitching Segmentation Output}} for {{Remote Sensing}}},
+  author = {Huang, Bohao and Reichman, Daniel and Collins, L. and Bradbury, Kyle and Malof, Jordan M.},
+  year = {2018},
+  month = may,
+  journal = {arXiv: Computer Vision and Pattern Recognition},
+  urldate = {2024-06-28},
+  abstract = {In this work we consider the application of convolutional neural networks (CNNs) for pixel-wise labeling (a.k.a., semantic segmentation) of remote sensing imagery (e.g., aerial color or hyperspectral imagery). Remote sensing imagery is usually stored in the form of very large images, referred to as "tiles", which are too large to be segmented directly using most CNNs and their associated hardware. As a result, during label inference, smaller sub-images, called "patches", are processed individually and then "stitched" (concatenated) back together to create a tile-sized label map. This approach suffers from computational ineffiency and can result in discontinuities at output boundaries. We propose a simple alternative approach in which the input size of the CNN is dramatically increased only during label inference. This does not avoid stitching altogether, but substantially mitigates its limitations. We evaluate the performance of the proposed approach against a vonventional stitching approach using two popular segmentation CNN models and two large-scale remote sensing imagery datasets. The results suggest that the proposed approach substantially reduces label inference time, while also yielding modest overall label accuracy increases. This approach contributed to our wining entry (overall performance) in the INRIA building labeling competition.},
+  file = {C:\Users\paulc\Zotero\storage\WQLPJK7J\Huang et al. - 2018 - Tiling and Stitching Segmentation Output for Remot.pdf}
 }
 
 @article{Hurst-Tarrab:RobustParking:2020,
@@ -1052,6 +1094,20 @@
   abstract = {Minimum parking standards, which require developers to build a certain amount of off-street parking spaces, are increasingly criticized for leading to excess parking supply and automobile travel in recent years. However, due to the difficulty in identifying the policy effect, few empirical studies have directly and accurately estimated the effects of parking standards on parking supply. The present study examines a parking reform in London, UK, where minimum parking standards for residential developments were replaced with maximum standards in the early 2000s. Using planning application records, we match neighboring pre-reform and post-reform developments to estimate the effect of the parking standard switch and further identify the "binding" and "capping" effects of minimum and maximum parking standards. It is found that the parking reform in London has led to a reduction of approximately 0.76 parking spaces per unit in residential development applications, or 49\% of the pre-reform level. Minimum parking standards seem to have a larger impact than maximum ones on parking supply that fell more upon inner city developments, while maximum parking standards have more influenced suburban neighborhoods. Market forces have played a major role in the decline of parking supply. The findings provide strong evidence for the market distortion effect of minimum parking standards. {\copyright} 2014.},
   keywords = {Binary alloys,Commerce,Housing,Parking,Potassium alloys,Uranium alloys},
   file = {C:\Users\paulc\Zotero\storage\77LUC79X\Li et Guo - 2014 - Do parking standards matter Evaluating the London.pdf}
+}
+
+@article{Li:TransformerBasedVisual:2023,
+  title = {Transformer-{{Based Visual Segmentation}}: {{A Survey}}},
+  shorttitle = {Transformer-{{Based Visual Segmentation}}},
+  author = {Li, Xiangtai and Ding, Henghui and Yuan, Haobo and Zhang, Wenwei and Pang, Jiangmiao and Cheng, Guangliang and Chen, Kai and Liu, Ziwei and Loy, Chen Change},
+  year = {2023},
+  publisher = {arXiv},
+  doi = {10.48550/ARXIV.2304.09854},
+  urldate = {2024-06-28},
+  abstract = {Visual segmentation seeks to partition images, video frames, or point clouds into multiple segments or groups. This technique has numerous real-world applications, such as autonomous driving, image editing, robot sensing, and medical analysis. Over the past decade, deep learning-based methods have made remarkable strides in this area. Recently, transformers, a type of neural network based on self-attention originally designed for natural language processing, have considerably surpassed previous convolutional or recurrent approaches in various vision processing tasks. Specifically, vision transformers offer robust, unified, and even simpler solutions for various segmentation tasks. This survey provides a thorough overview of transformer-based visual segmentation, summarizing recent advancements. We first review the background, encompassing problem definitions, datasets, and prior convolutional methods. Next, we summarize a meta-architecture that unifies all recent transformer-based approaches. Based on this meta-architecture, we examine various method designs, including modifications to the meta-architecture and associated applications. We also present several closely related settings, including 3D point cloud segmentation, foundation model tuning, domain-aware segmentation, efficient segmentation, and medical segmentation. Additionally, we compile and re-evaluate the reviewed methods on several well-established datasets. Finally, we identify open challenges in this field and propose directions for future research. The project page can be found at https://github.com/lxtGH/Awesome-Segmentation-With-Transformer. We will also continually monitor developments in this rapidly evolving field.},
+  copyright = {arXiv.org perpetual, non-exclusive license},
+  keywords = {Computer Vision and Pattern Recognition (cs.CV),FOS: Computer and information sciences},
+  file = {C:\Users\paulc\Zotero\storage\EBJTSY5D\Li et al. - 2023 - Transformer-Based Visual Segmentation A Survey.pdf}
 }
 
 @article{Lichtblau:ClassificationImpervious:2019,
@@ -1557,6 +1613,23 @@
   file = {C\:\\Users\\paulc\\Zotero\\storage\\EW92MNGF\\Taylor et al. - 2009 - Nature andor nurture Analyzing the determinants .pdf;C\:\\Users\\paulc\\Zotero\\storage\\YNQCYA7I\\S0965856408001274.html}
 }
 
+@article{Thisanke:SemanticSegmentation:2023,
+  title = {Semantic Segmentation Using {{Vision Transformers}}: {{A}} Survey},
+  shorttitle = {Semantic Segmentation Using {{Vision Transformers}}},
+  author = {Thisanke, Hans and Deshan, Chamli and Chamith, Kavindu and Seneviratne, Sachith and Vidanaarachchi, Rajith and Herath, Damayanthi},
+  year = {2023},
+  month = nov,
+  journal = {Engineering Applications of Artificial Intelligence},
+  volume = {126},
+  pages = {106669},
+  issn = {0952-1976},
+  doi = {10.1016/j.engappai.2023.106669},
+  urldate = {2024-06-28},
+  abstract = {Semantic segmentation has a broad range of applications in a variety of domains including land coverage analysis, autonomous driving, and medical image analysis. Convolutional neural networks (CNN) and Vision Transformers (ViTs) provide the architecture models for semantic segmentation. Even though ViTs have proven success in image classification, they cannot be directly applied to dense prediction tasks such as image segmentation and object detection since ViT is not a general purpose backbone due to its patch partitioning scheme. In this survey, we discuss some of the different ViT architectures that can be used for semantic segmentation and how their evolution managed the above-stated challenge. The rise of ViT and its performance with a high success rate motivated the community to slowly replace the traditional convolutional neural networks in various computer vision tasks. This survey aims to review and compare the performances of ViT architectures designed for semantic segmentation using benchmarking datasets. This will be worthwhile for the community to yield knowledge regarding the implementations carried out in semantic segmentation and to discover more efficient methodologies using ViTs.},
+  keywords = {Convolution neural networks,Deep learning,Review,Self-supervised learning,Semantic segmentation,Survey,Vision Transformer},
+  file = {C\:\\Users\\paulc\\Zotero\\storage\\TQFRUY43\\Thisanke et al. - 2023 - Semantic segmentation using Vision Transformers A.pdf;C\:\\Users\\paulc\\Zotero\\storage\\CJ9QQWVL\\S0952197623008539.html}
+}
+
 @article{Thompson:PARKINFOCentralcity:1993,
   title = {{{PARKINFO}}. {{A}} Central-City Parking Information System},
   author = {Thompson, R.G. and Collins, E.C.},
@@ -1634,6 +1707,18 @@
   abstract = {This paper is the first to empirically examine the residents' willingness to pay for on-street parking permits as well as the cost of cruising using an identification methodology based on house prices for Amsterdam. The residents' cost of cruising is about {\texteuro}1 per day. The residents' willingness to pay for a parking permit is about {\texteuro}10 per day.},
   keywords = {Cruising,House prices,Parking permits,Parking policy,Residential parking,Street parking},
   file = {C\:\\Users\\paulc\\Zotero\\storage\\BTKA2M4I\\van Ommeren et al. - 2011 - The real price of parking policy.pdf;C\:\\Users\\paulc\\Zotero\\storage\\6VBZVNHW\\S0094119011000155.html}
+}
+
+@inproceedings{Vaswani:AttentionAll:2017,
+  title = {Attention Is {{All}} You {{Need}}},
+  booktitle = {Advances in {{Neural Information Processing Systems}}},
+  author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and ukasz Kaiser, {\L} and Polosukhin, Illia},
+  year = {2017},
+  volume = {30},
+  publisher = {Curran Associates, Inc.},
+  urldate = {2024-06-28},
+  abstract = {The dominant sequence transduction models are based on complex recurrent orconvolutional neural networks in an encoder and decoder configuration. The best performing such models also connect the encoder and decoder through an attentionm echanisms.  We propose a novel, simple network architecture based solely onan attention mechanism, dispensing with recurrence and convolutions entirely.Experiments on two machine translation tasks show these models to be superiorin quality while being more parallelizable and requiring significantly less timeto train. Our single model with 165 million parameters, achieves 27.5 BLEU onEnglish-to-German translation, improving over the existing best ensemble result by over 1 BLEU. On English-to-French translation, we outperform the previoussingle state-of-the-art with model by 0.7 BLEU, achieving a BLEU score of 41.1.},
+  file = {C:\Users\paulc\Zotero\storage\MMWS3K63\Vaswani et al. - 2017 - Attention is All you Need.pdf}
 }
 
 @article{Vickrey:StatementJoint:1994,
