Réorganisation de la section méthodologique

--- a/6-Revue_litterature.tex
+++ b/6-Revue_litterature.tex
@@ -20,7 +20,7 @@ Cette section aura pour but de dresser l'état des connaissances sur les politiq
   \subsection{Stationnement hors rue}
   Selon \textcite{Shoup:HighCost:2005}, les minimums de stationnement ont vu le jour dans les années 50 en réponse à la croissance du parc automobile et pour assurer que les commerçants et citoyens internalisaient les coûts associés à l'automobile. Ce mécanisme règlementaire est encore omniprésent au Québec puisque seuls les arrondissement de Côte des Neiges, du Sud-Ouest, du Plateau Mont-Royal et du Centre-Ville de Montréal \hl{besoin de citations}. La ville de Québec est en processus d'abroger ces requis pour l'habitation pour les zones en milieu dense ou le long des axes de transport en commun \parencite{VilledeQuebec:AdoptionReglement:2024}.\par
   Ces codes ont été utilisés pour faire l'inventaire de stationnement dans plusieurs métropoles. Cela étant dit, l'historique de fusion de municipalités et la difficulté de trouver des codes d'urbanisme avant 1995 rend l'utilisation de ces données relativement difficile. La figure \ref{fig:historique_fusions} montre les fusions successives ayant mené à l'actuelle ville de Québec:
-  \begin{figure}
+  \begin{figure}[!h]
     \centering
     \captionsetup{justification=centering,margin=2cm}
     \includegraphics[width = 0.5\textwidth]{images/historique_fusions_VDQ.png}
@@ -28,7 +28,7 @@ Cette section aura pour but de dresser l'état des connaissances sur les politiq
     \caption{Diagramme montrant les fusions géopolitiques de la ville de Québec. \hl{Vérifier droits d'auteurs} Source: \cite{VilledeQuebec:ReperesChronologique:}}
     \label{fig:historique_fusions}
   \end{figure}
-
+  \FloatBarrier
   \subsection{Coûts de provision}
   Plusieurs coûts sont associés à la provision de stationnements, autant pour les individus, que pour les collectivités locales ou de tierces parties plus difficiles à identifier dans le cas d'externalités. Cette section visera à identifier quels sont les coûts associés et qui les porte.
 
@@ -135,3 +135,4 @@ Cette section aura pour but de dresser l'état des connaissances sur les politiq
         \caption{Jeux de données annotés de segmentation sémantique en milieu urbain}
         \label{tab:jeux_donnees_segmentation_urbain}
     \end{table}
+    \FloatBarrier
