Agrandissement de la figure sur le zonage et ajout d'argument de localisation

--- a/7-1-Details_Solution.tex
+++ b/7-1-Details_Solution.tex
@@ -125,9 +125,9 @@ La section méthodologique sera divisée en trois sections. La première présen
         \item Générale
       \end{itemize}
       L'affectation a chacun de ces types est faite au niveau de l'unité de voisinage. La définition spatiale des unités de voisinage est donnée dans \textcite{VilledeQuebec:ZonageMunicipal:2024} et l'assignation de la zone est donnée dans \textcite{VilledeQuebec:GrilleSpecifications:2024}. La carte à la figure \ref{fig:types_unites_voisinage} montre les unités de voisinage pour la ville de Québec catégorisé selon la définition ci-haut:
-      \begin{figure}
+      \begin{figure}[!h]
         \centering
-        \includegraphics[width=0.5\linewidth]{images/Types_unites_voisinage.png}
+        \includegraphics[width=0.8\linewidth]{images/Types_unites_voisinage.png}
         \caption{Types d'unités de voisinage}
         \label{fig:types_unites_voisinage}
       \end{figure}
